# DioxusPostgres2

./: README.md
pg_app/: .gitignore  Cargo.toml  Dioxus.toml  README.md  docker-compose.yml  package-lock.json  sharedFiles.md
pg_app/app/: Cargo.toml
pg_app/app/src/: main.rs
pg_app/assets/: Cargo.toml  tailwind.css
pg_app/assets/src/: assets.rs  lib.rs
pg_app/components/: Cargo.toml
pg_app/components/src/: lib.rs
pg_app/components/src/db/: add_post.rs  all_posts.rs  lib.rs  mod.rs  post.rs  test_post.rs
pg_app/components/src/db/auth/: add_user.rs
pg_app/components/src/db/borrowers/: borrower_table.rs
pg_app/components/src/db/user/: get_user.rs
pg_app/components/src/layout/: app_layout.rs  footer.rs  header.rs  mod.rs  navbar.rs
pg_app/components/src/ui/: avatar.rs  avatar_drop.rs  hero.rs  inline_form.rs  input.rs  loading_spinner.rs  mod.rs  modal.rs  table.rs  toast.rs
pg_app/migrations/: 20250410011536_posts.sql  20250411220014_users.sql  20250417014939_posts.sql  20250417015321_users.sql
pg_app/migrations/20250416212659_users/: down.sql  up.sql
pg_app/migrations/20250416212742_password_reset/: down.sql  up.sql
pg_app/migrations/20250417001143_posts/: down.sql
pg_app/pages/: Cargo.toml
pg_app/pages/src/: blog.rs  dashboard.rs  lib.rs  main.rs  not_found.rs  routes.rs
pg_app/pages/src/components/: echo.rs  hero.rs  mod.rs
pg_app/pages/src/layout/: app_layout.rs  footer.rs  mod.rs  navbar.rs
pg_app/pages/src/views/: blog.rs  dashboard.rs  home.rs  layout.rs  mod.rs  navbar.rs  random.rs  test_header.rs
pg_app/routes/: Cargo.toml
pg_app/routes/src/: lib.rs
pg_app/server/: Cargo.toml
pg_app/server/src/: db_connection.rs  lib.rs  post_functions.rs  server_functions.rs
pg_app/server/src/users/: auth_functions.rs  mod.rs  user_functions  user_functions.rs
pg_app/shared/: Cargo.toml
pg_app/shared/src/: api.rs  dtos.rs  error.rs  lib.rs  models.rs  page_components.rs  routes.rs  validation.rs
pg_app/shared/src/models/: mod.rs  post_models.rs  role_models.rs  user_models.rs
pg_app/src/: main.rs
