# directory is only acting as a workspace (not a crate)

[workspace]
resolver = "2"
members = [
    "server", 
    "shared",
    "components",
    "assets",
    "pages",
]

[workspace.dependencies]
dioxus = { version = "0.6.3" }

# workspace
assets = { path = "assets" }
server = { path = "server" }
shared = { path = "shared" }



[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"


