# directory is only acting as a workspace (not a crate)

[workspace]
resolver = "2"
members = [
    "server", 
    "shared",
    "components",
    "assets",
    "pages",
    "routes",

]

[workspace.dependencies]
dioxus = { version = "0.6.3" }

# workspace
assets = { path = "assets" }
server = { path = "server" }
shared = { path = "shared" }
routes = { path = "routes" }



[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"


