# directory is only acting as a workspace (not a crate)

[workspace]
resolver = "2"
members = [
    "server", 
    "shared",
    "components",
    "pages",
    "app" 
]



[workspace.dependencies]
dioxus = { version = "0.6.3" }
dioxus-web = "0.6.3"    # Add if needed
dioxus-desktop = "0.6.3" # Add if needed
# workspace
assets = { path = "assets" }
server = { path = "server" }
shared = { path = "shared" }



#[profile.wasm-dev]
#inherits = "dev"
#opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"


