[package]
name = "components"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
shared = { path = "../shared" }
log = "0.4"
dioxus = { version = "0.6.3" }  # Keep as required dep
dioxus-desktop = { version = "0.6.3", optional = true }  # Now optional
chrono = "0.4.40"
tokio = "1.44.2"


# Platform-specific
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window"] }

[features]
default = []
#web = ["dep:wasm-bindgen-futures", "dep:web-sys"]
desktop = ["dep:dioxus-desktop"]  # Proper feature declaration