[package]
name = "pages"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pages"
path = "src/main.rs"

[dependencies]
components = { path = "../components" }  # Relative path to your components crate
shared = { path = "../shared" }
dioxus = { version = "0.6.3", features = ["router", "fullstack"] }
dioxus-desktop = "0.6.3"


# plus anything else you need


assets = { workspace = true }

[package.metadata.bundle]
name = "YourAppName"
identifier = "com.yourdomain.yourapp"
icon = ["../assets/icon.png"]