# pg_app/pages/Cargo.toml
[package]
name = "pages"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pages"
path = "src/lib.rs"

[dependencies]
components = { path = "../components" }  # Relative path to your components crate
dioxus = { version = "0.6.3", features = ["router", "fullstack"] }
dioxus-desktop = "0.6.3"
shared = { path = "../shared", features = ["frontend"] }  


# plus anything else you need


assets = { workspace = true }

[package.metadata.bundle]
name = "YourAppName"
identifier = "com.yourdomain.yourapp"
icon = ["../assets/icon.png"]