[package]
name = "pages"
version = "0.1.0"
edition = "2024"

[lib]
name = "pages"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Workspace dependencies
dioxus = { workspace = true, features = ["router"] }
dioxus-web = { workspace = true }
shared = { workspace = true, features = ["frontend"] }
components = { path = "../components" }

# Platform-specific (mark desktop as optional)
dioxus-desktop = { workspace = true, optional = true }  # Added optional=true

#[target.'cfg(target_arch = "wasm32")'.dependencies]
# WASM-specific dependencies here

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop", "dep:dioxus-desktop"]  # Uses dep: prefix