# pg_app/server/Cargo.toml
[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { workspace = true, features = ["fullstack"] }
shared = { path = "../shared", features = ["frontend"] }

argon2 = "0.5.3"
rand_core = "0.9.3"
rand = "0.9.0"
dotenv = "0.15.0"
tokio = { version = "1.44.2", features = [
  "parking_lot",
  "rt-multi-thread",
  "macros",
], optional = true }
sqlx = { version = "0.8.3", features = [
  "runtime-tokio",
  "tls-rustls",
  "postgres",
], optional = true }

tracing = "0.1.41"
tracing-subscriber = "0.3.19"
getrandom = { version = "0.3.2", features = ["wasm_js"] }


[features]
default = ["db"]
db = ["tokio", "sqlx"]