[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
# Workspace dependencies (single declaration)
shared = { path = "../shared", features = ["backend", "db"] }

# Core runtime
tokio = { version = "1.44", features = ["rt-multi-thread", "macros"] }

# Observability
tracing = "0.1"
tracing-subscriber = "0.3"

# Auth
argon2 = "0.5"
rand = { version = "0.9", features = ["std_rng"] }
rand_core = "0.9"

# Configuration
dotenv = "0.15"

# Database (feature-gated)
sqlx = { version = "0.8", optional = true, features = [
    "runtime-tokio",
    "postgres",
    "tls-rustls",
    "migrate"
]}

# SSR
dioxus = { workspace = true, features = ["fullstack"] }

[features]
default = ["database"]
database = ["dep:sqlx", "shared/db"]

[build-dependencies]
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "tls-rustls",
    "migrate"
]}