[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]

# Core serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "chrono",
    "uuid",
    "json"
]}

# UI Framework (now marked as optional)
dioxus = { version = "0.6" }

# Validation
validator = { version = "0.20", features = ["derive"] }

# Utilities
regex = "1.9"
lazy_static = "1.4"
chrono = { version = "0.4", features = ["serde", "clock"] }

# Enum utilities
strum = { version = "0.27", features = ["derive"] }

# Security
sha2 = "0.10"
bcrypt = "0.17"

# Error handling
thiserror = "2.0"

[features]
frontend = ["dep:dioxus"]  # Explicit feature dependency