[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
# Always available
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
strum = { version = "0.27", features = ["derive"] }
regex = "1.9"
lazy_static = "1.4"
tokio = { version = "1.0", optional = true }
# Frontend-only
dioxus = { version = "0.6", optional = true }

# Backend-only (optional)
sqlx = { version = "0.8", optional = true }
bcrypt = { version = "0.17", optional = true }
validator = { version = "0.20", optional = true, features = ["derive"] }

# Conditional chrono features
chrono = { version = "0.4", default-features = false, features = ["serde"] }

[features]
default = []
frontend = ["dep:dioxus"]
backend = [
    "dep:sqlx",
    "dep:bcrypt",
    "dep:validator",
    "chrono/clock"
]
db = ["dep:sqlx", "dep:tokio"]  # Add this line


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Additional native-only deps if needed





