[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]

# Always available
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
strum = { version = "0.27", features = ["derive"] }
regex = "1.9"
lazy_static = "1.4"
tokio = { version = "1.0", optional = true }
# Frontend-only
dioxus = { version = "0.6.3"}
dioxus-fullstack = "0.6.3"


# Backend-only
sqlx = { version = "0.8", features = ["postgres", "chrono", "runtime-tokio"] }
bcrypt = { version = "0.17", optional = true }
validator = { version = "0.20", features = ["derive"] }

# Conditional chrono features
chrono = { version = "0.4", default-features = false, features = ["serde"] }

[features]
default = []
frontend = []
backend = [
    "dep:bcrypt",
    "chrono/clock"
]
#    "dep:validator",     "dep:sqlx",



db = [ "dep:tokio"]  




